--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
   "name": "mern-feelplanet-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A full-stack application in MERN.",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/peterhychan/mern-feelplanet-app.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Peter (Ho Yeung) Chan",
+  "license": "Apache License 2.0",
   "bugs": {
     "url": "https://github.com/peterhychan/mern-feelplanet-app/issues"
   },
   "homepage": "https://github.com/peterhychan/mern-feelplanet-app#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
     "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
