--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
